--- a/src/app/components/hora-atencion/agenda/agenda.component.html
+++ b/src/app/components/hora-atencion/agenda/agenda.component.html
@@ -1,8 +1,13 @@
 <!-- Agenda (Horas del día + agendar horas disponibles)-->
-<div class="container" id="main">
+<div  id="main">
     <div class="row" id="title">
-        <div class="col-lg-6 date">
-            <h1>Agenda</h1>
+        <div class="col-lg-6">
+            <div class="col-lg-4 float text-right">
+                <i class="bi bi-journal-bookmark-fill" id="journal"></i>
+            </div>
+            <div class="col-lg-8 float text-left" id="agenda-title">
+                <h1>Agenda</h1>
+            </div>
         </div>
 
         <!-- Input que permite buscar horarios por fecha -->
