--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -40,7 +40,7 @@
                         <div class="form-group">
                             <label for="password">Contraseña:</label>
                             <div class="input-group">
-                                <span class="input-group-text"><i class="bi bi-person-fill"></i></span>
+                                <span class="input-group-text"><i class="bi bi-key-fill"></i></span>
                                 <input id="password" name="password" type="password" class="form-control" ngModel
                                     #password="ngModel" [(ngModel)]="usuario.password" required>
                             </div>
