--- a/src/app/components/paciente/historial-pacientes/historial-pacientes.component.html
+++ b/src/app/components/paciente/historial-pacientes/historial-pacientes.component.html
@@ -1,4 +1,4 @@
-<div class="container date" id="main">
+<div class="date" id="main">
     <div class="row title">
         <div class="col-lg-6 date">
             <h2>Historial de pacientes</h2>
