--- a/src/app/components/paciente/lista-pacientes.component.html
+++ b/src/app/components/paciente/lista-pacientes.component.html
@@ -1,8 +1,8 @@
-<div class="container date" id="main">
+<div class="date" id="main">
     <div class="row title">
         <div class="col-lg-6 date">
             <h2>{{title}}</h2>
-            <h5>{{subtitle}}</h5>
+            <h4>{{subtitle}}</h4>
         </div>
         <div class="col-lg-6" id="search-by-name-input">
             <app-busqueda-paciente (searchPatientEvent)="getPatients($event)"></app-busqueda-paciente>
