--- a/src/app/components/paciente/paciente-form/paciente-form.component.html
+++ b/src/app/components/paciente/paciente-form/paciente-form.component.html
@@ -1,4 +1,4 @@
-<div class="container card" id="main">
+<div class="card" id="main">
     <div class="row" id="title">
         <div class="col-lg-12 date">
             <h2>{{title}}</h2>
