--- a/src/app/components/anamnesis/anamnesis-form/anamnesis-form.component.html
+++ b/src/app/components/anamnesis/anamnesis-form/anamnesis-form.component.html
@@ -1,8 +1,8 @@
-<div class="container" id="main">
+<div id="main">
     <div class="row">
         <div class="col-lg-12" id="title">
             <h2>{{paciente.nombre + " " + paciente.apellido}}</h2>
-            <h5>Complete los campos solicitados para registrar la anamnesis del paciente.</h5>
+            <h4>Complete los campos solicitados para registrar la anamnesis del paciente.</h4>
         </div>
     </div>
     <div class="row">
