--- a/src/app/components/ficha-tratamiento/ficha-tratamiento-form/ficha-tratamiento-form.component.html
+++ b/src/app/components/ficha-tratamiento/ficha-tratamiento-form/ficha-tratamiento-form.component.html
@@ -1,8 +1,8 @@
-<div class="container" id="main">
+<div id="main">
     <div class="row">
         <div class="col-lg-12" id="title">
             <h2>{{paciente.nombre + " " + paciente.apellido}}</h2>
-            <h5>Complete los campos solicitados para registrar la ficha de tratamiento del paciente.</h5>
+            <h4>Complete los campos solicitados para registrar la ficha de tratamiento del paciente.</h4>
         </div>
     </div>
 
@@ -227,7 +227,7 @@
 
                 <div class="row">
                     <!-- Guardar/actualizar la ficha de tratamiento -->
-                    <div class="col-lg-7 text-right">
+                    <div class="col-lg-6 text-right">
                         <button *ngIf="!fichaTratamiento.idFichaTratamiento; else updateButton"
                             (click)="createFichaTratamiento()"
                             [disabled]="motivoConsulta.invalid || resultadoDiagnostico.invalid || sugerenciaTratamiento.invalid || objetivosTerapia.invalid
@@ -243,7 +243,7 @@
                     </div>
 
                     <!-- Para volver atrás -->
-                    <div class="col-lg-5 text-right">
+                    <div class="col-lg-6 text-right">
                         <button
                             (click)="back(motivoConsulta.value, resultadoDiagnostico.value, sugerenciaTratamiento.value, objetivosTerapia.value)"
                             class="btn btn-primary" type="button">Volver</button>
