--- a/src/app/components/hora-atencion/agenda/horario/horario.component.html
+++ b/src/app/components/hora-atencion/agenda/horario/horario.component.html
@@ -1,4 +1,4 @@
-<div class="container" id="main">
+<div id="main">
     <div class="row">
         <!-- Si no hay horarios de atención para mostrar -->
         <div *ngIf="horasFechaDelDia.length == 0" class="col-lg-12 text-center">
