--- a/src/app/components/paciente/atenciones-paciente/atenciones-paciente.component.html
+++ b/src/app/components/paciente/atenciones-paciente/atenciones-paciente.component.html
@@ -1,10 +1,10 @@
-<div class="container" id="main">
+<div id="main">
 
     <!-- Título -->
     <div class="row separate">
         <div class="col-lg-7" id="text">
             <h2>{{paciente.nombre + " " + paciente.apellido}}</h2>
-            <h5>El/la paciente ha agendado las siguientes atenciones.</h5>
+            <h4>El/la paciente ha agendado las siguientes atenciones.</h4>
         </div>
         <div class="col-lg-5">
             <app-filtrar-asistencia [title]="'Filtrar las atenciones'" [options]="options"
@@ -66,7 +66,7 @@
                             <!-- Opciones -->
                             <td *ngIf="atencion.pago">
                                 <button (click)="detallePago(atencion)" data-toggle="modal" data-target="#detallePago"
-                                    class="btn btn-primary" type="button">Ver detalle pago</button>
+                                    class="btn btn-primary multiple-payment-btn-add" type="button">Ver detalle pago</button>
                             </td>
                             <td *ngIf="!atencion.pago && !selected">
                                 <button [disabled]="atencion.asistencia == -1"
