--- a/src/app/components/paciente/paciente/paciente.component.html
+++ b/src/app/components/paciente/paciente/paciente.component.html
@@ -1,8 +1,8 @@
-<div class="container" id="main">
-    <div class="container">
+<div id="main">
+    <div>
         <!-- Ícono y nombre del paciente -->
         <div class="row" id="header">
-            <div class="col-lg-4">
+            <div class="col-lg-4 text-right">
                 <i class="bi bi-person-lines-fill"></i>
             </div>
             <div class="col-lg-8 text-center" id="patient-name">
