--- a/src/app/components/pago/pago-form/pago-form.component.html
+++ b/src/app/components/pago/pago-form/pago-form.component.html
@@ -1,9 +1,9 @@
-<div class="container" id="main">
+<div id="main">
     <div class="row" id="title">
-        <div class="col-lg-12">
+        <div class="col-lg-12 text-center">
             <h2 *ngIf="!horarioAtencion.pago?.idPago">Registrar pago</h2>
             <h2 *ngIf="horarioAtencion.pago?.idPago">Modificar pago</h2>
-            <h5>Ingrese los datos solicitados.</h5>
+            <h4>Ingrese los datos solicitados.</h4>
         </div>
     </div>
     <div class="row">
