--- a/src/app/components/sesion-terapia/sesion-terapia-form/sesion-terapia-form.component.html
+++ b/src/app/components/sesion-terapia/sesion-terapia-form/sesion-terapia-form.component.html
@@ -1,11 +1,11 @@
-<div class="container" id="main">
+<div id="main">
     <div class="row" id="title">
         <div class="col-lg-6">
             <h2>{{title}}</h2>
-            <h5>{{subtitle}}</h5>
+            <h4>{{subtitle}}</h4>
         </div>
         <div class="col-lg-6 text-right my-3">
-            <h5>Hoy es {{fechaActual}}.</h5>
+            <h3>Hoy es {{fechaActual}}.</h3>
         </div>
     </div>
 
