--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="text-center">
+<!-- <div class="text-center">
     <nav [ngClass]="{'login-navbar' : !auth.isAuthenticated()}" class="navbar navbar-expand-lg navbar-dark"
         style="background-color: #284b63;">
         <div class="container-fluid">
@@ -29,6 +29,39 @@
             </div>
         </div>
     </nav>
-</div>
+</div> -->
+
+<nav [ngClass]="{'login-navbar' : !auth.isAuthenticated()}" class="navbar navbar-expand-lg navbar-dark"
+    style="background-color: #284b63;">
+    <!-- Si el usuario no se ha autenticado -->
+    <div *ngIf="!auth.isAuthenticated()" class="col-lg-12 text-center">
+        <h3>Consulta psicológica</h3>
+        <h1>Dr. Patricio Lara Hadi</h1>
+    </div>
+
+    <!-- Si está autenticado -->
+    <a *ngIf="auth.isAuthenticated()" class="navbar-brand">Dr. Patricio Lara Hadi | Consulta
+        psicológica</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul *ngIf="auth.isAuthenticated()" class="navbar-nav ml-auto">
+            <li (click)="clickNavLink(0)" [ngClass]="{'active': activeLink[0]}" class="nav-item">
+                <a class="nav-link" [routerLink]="['/agenda']">Agenda<span class="sr-only">(current)</span></a>
+            </li>
+            <li (click)="clickNavLink(1)" [ngClass]="{'active': activeLink[1]}" class="nav-item">
+                <a class="nav-link" [routerLink]="['/pacientes/page/0']">Pacientes</a>
+            </li>
+        </ul>
+        <ul *ngIf="auth.isAuthenticated()" class="navbar-nav navbar-right">
+            <li class="nav-item">
+                <a (click)="logout()" class="nav-link">Cerrar sesión</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
 <router-outlet></router-outlet>
