cambia funcionalidad pago

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,10 @@
 .login-navbar {
-    height: 150px;
+    height: 20vh;
     width: 35vw;
     margin: 0 auto;
     margin-top: 20px;
     border-bottom: 5px solid #fff;
+    border-radius: 10px;
 }
 
 .navbar-brand {
