--- a/src/app/components/pago/pago-form/pago-form.component.html
+++ b/src/app/components/pago/pago-form/pago-form.component.html
@@ -18,7 +18,7 @@
                                 <span class="input-group-text"><i class="bi bi-file-medical-fill"></i></span>
                                 <input readonly value="{{horarioAtencion.paciente.afiliacionSalud}}" type="text" ngModel
                                     #afiliacionPaciente="ngModel" class="form-control" id="afiliacion-pago"
-                                    name="afiliacion-pago" [(ngModel)]="afiliacion" maxlength="30">
+                                    name="afiliacion-pago" maxlength="30">
                             </div>
                         </div>
                     </div>
