--- a/src/app/components/hora-atencion/agenda/horario/horario.component.html
+++ b/src/app/components/hora-atencion/agenda/horario/horario.component.html
@@ -24,7 +24,7 @@
                             <td>
                                 <div class="row">
                                     <div class="col-lg-12 text-center">
-                                        <button (click)="verDetalle(hora)" data-toggle="modal"
+                                        <button (click)="verDetalle(hora, hora.paciente)" data-toggle="modal"
                                             data-target="#detalleHora" class="btn btn-primary" type="button">Ver
                                             detalle</button>
                                         <button [routerLink]="['/nuevo-horario', hora.idAtencion]"
@@ -198,7 +198,7 @@
             </div>
             <div class="modal-body">
                 <div class="col-lg-12 text-center">
-                    <app-pago [horarioAtencion]="horario"></app-pago>
+                    <app-pago [horarioAtencion]="horario" [paciente]="paciente"></app-pago>
                 </div>
             </div>
             <div class=" modal-footer" *ngIf="horario.pago">
