--- a/src/app/components/paciente/atenciones-paciente/atenciones-paciente.component.html
+++ b/src/app/components/paciente/atenciones-paciente/atenciones-paciente.component.html
@@ -129,7 +129,7 @@
                                                     class="bi bi-file-medical-fill"></i></span>
                                             <input readonly value="{{paciente.afiliacionSalud}}" type="text" ngModel
                                                 #afiliacionPaciente="ngModel" class="form-control" id="afiliacion-pago"
-                                                name="afiliacion-pago" [(ngModel)]="afiliacion" maxlength="30">
+                                                name="afiliacion-pago" maxlength="30">
                                         </div>
                                     </div>
                                 </div>
@@ -216,7 +216,7 @@
                 (paciente.afiliacionSalud?.toLowerCase() != 'particular' && medioPago.value == 'Efectivo')"
                     (click)="confirmPayment()" data-dismiss="modal" class="btn btn-primary" type="button">Registrar
                     pago</button>
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
             </div>
         </div>
     </div>
@@ -234,7 +234,7 @@
             </div>
             <div class="modal-body">
                 <div class="col-lg-12 text-center">
-                    <app-pago [horarioAtencion]="horario"></app-pago>
+                    <app-pago [horarioAtencion]="horario" [paciente]="paciente"></app-pago>
                 </div>
             </div>
             <div class=" modal-footer" *ngIf="horario.pago">
