--- a/src/app/components/pago/pago.component.html
+++ b/src/app/components/pago/pago.component.html
@@ -5,7 +5,7 @@
         <div class="col-lg-12 text-center">
             <i class="bi bi-file-medical-fill"></i>
             <h5 class="color">Afiliación de salud asociada al pago</h5>
-            <h5 class="overflow">{{horarioAtencion.pago?.afiliacionPaciente}}</h5>
+            <h5 class="overflow">{{paciente.afiliacionSalud}}</h5>
         </div>
     </div>
 
