--- a/src/app/components/hora-atencion/agenda/horario/nuevo-horario-form/nuevo-horario-form.component.html
+++ b/src/app/components/hora-atencion/agenda/horario/nuevo-horario-form/nuevo-horario-form.component.html
@@ -219,8 +219,8 @@
                     paciente!</small>
                 </div>
                 <div *ngIf="afiliacionSaludPaciente.errors?.pattern">
-                  <small class="text-danger">Este campo no puede quedar en blanco, ni se permite el ingreso de
-                    caracteres especiales.</small>
+                  <small class="text-danger">El campo no puede quedar en blanco, ni tampoco se permite el ingreso de
+                    dígitos o caracteres especiales!</small>
                 </div>
               </div>
             </div>
@@ -230,7 +230,7 @@
           <div class="row">
             <div class="col-lg text-left">
               <button
-                [disabled]="nombrePaciente.invalid || apellidoPaciente.invalid || telefonoPaciente.invalid || afiliacionSaludPaciente.invalid || emailPaciente.invalid" 
+                [disabled]="nombrePaciente.invalid || apellidoPaciente.invalid || telefonoPaciente.invalid || afiliacionSaludPaciente.invalid || emailPaciente.invalid"
                 (click)="guardarNuevoPaciente()" class="btn btn-primary" type="button">Guardar datos</button>
             </div>
             <div class="col-lg text-right">
@@ -374,8 +374,8 @@
             <label for="email-paciente">E-mail</label>
             <div class="input-group">
               <span class="input-group-text"><i class="bi bi-at"></i></span>
-              <input id="email-paciente" name="email-paciente" type="email" class="form-control" [(ngModel)]="paciente.email"
-                ngModel #emailPaciente="ngModel" email>
+              <input id="email-paciente" name="email-paciente" type="email" class="form-control"
+                [(ngModel)]="paciente.email" ngModel #emailPaciente="ngModel" email>
 
               <!-- Manejo de errores -->
               <div *ngIf="emailPaciente.invalid && (emailPaciente.touched || emailPaciente.dirty)" class="col-lg-12">
